5.2. Архивировать проект [#861 #215922]